<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.GameActivity">


    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/avdira"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lblNumeroOculto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitulo"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avdira"
        android:text="@string/text_defecto"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnVolver"
        android:layout_below="@+id/lblNumeroOculto"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNumeroIntroducido"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="25dp"
            android:background="@drawable/d_linea"
            android:drawableStart="@drawable/ic_edit"
            android:drawableTint="@color/colorGrisOscuro"
            android:ems="4"
            android:fontFamily="@font/avdira"
            android:hint="@string/numero"
            android:inputType="number"
            android:padding="6dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageButton
                android:id="@+id/btnHistorial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.3"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/imagen"
                android:src="@drawable/ic_restore"
                android:tint="@color/colorBlanco" />

            <Button
                android:id="@+id/btnComprobar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/avdira"
                android:text="@string/comprobar"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRendirse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorRendirse"
                android:fontFamily="@font/avdira"
                android:text="@string/rendirse" />

            <Button
                android:id="@+id/btnJugarDeNuevo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/avdira"
                android:text="@string/jugar_de_nuevo"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblPista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/avdira"
            android:text="@string/text_defecto"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@color/colorOtros"
        android:fontFamily="@font/avdira"
        android:text="@string/btn_volver" />

</RelativeLayout>